--- a/paper/MethodsX_Vasishth2019.Rnw
+++ b/paper/MethodsX_Vasishth2019.Rnw
@@ -108,7 +108,7 @@
 
 \keywords{Approximate Bayesian Computation; Bayesian parameter estimation; prior and posterior predictive checks; cue-based retrieval; sentence processing}
 
-\abstract{In this methods paper, we explain how prior and posterior predictive distributions of reading times are generated from the cue-based retrieval of Lewis \& Vasishth, 2005. Prior predictive distributions of reading time are generated from the model by defining a mildly informative prior on the parameter of interest (here, the latency factor). The posterior predictive distribution involves two steps: first, Approximate Bayesian Computation (ABC) is used with rejection sampling to compute the posterior distribution of the parameter of interest. This posterior distribution is then used to generated a posterior predictive distribution of reading times and of the effects predicted by the model. The ABC method of parameter estimation is superior to conventionally used approaches such as grid search, because model predictions take into account the uncertainty of the parameter value.} 
+\abstract{In this methods paper, we explain how prior and posterior predictive distributions of reading times are generated from the cue-based retrieval of Lewis \& Vasishth, 2005. Prior predictive distributions of reading time are generated from the model by defining a mildly informative prior on the parameter of interest (here, the latency factor). The posterior predictive distribution involves two steps: first, Approximate Bayesian Computation (ABC) is used with rejection sampling to compute the posterior distribution of the parameter of interest. This posterior distribution is then used to generate a posterior predictive distribution of reading times and of the effects predicted by the model. The ABC method of parameter estimation is superior to conventionally used approaches such as grid search, because model predictions take into account the uncertainty of the parameter value.} 
 
 \begin{document}
 
@@ -177,7 +177,7 @@ This paper explains the method used in \textcite{JaegerMertzenVanDykeVasishth201
 
 This model is a simplified version of the Lisp-based model described in \textcite{LewisVasishth2005}. This simplified version is written in R and abstracts away from the individual incremental parsing steps of the original model, and focuses instead only on the retrieval time and retrieval accuracy computations, given some retrieval cues and candidate chunks in memory that could match the retrieval cues. 
 
-Table~\ref{tbl:params} shows the parameter values used in the recent large-sample evaluation (approximately 100 published reading experiments) of the cue-based retrieval model described in \textcite{EngelmannJaegerVasishth2019}. Here, we follow the practice that was adopted in \textcite{LewisVasishth2005}, of holding all the parameters constant to their default value. The only exception is the latency factor parameter, which scales retrieval time to the millisecond reading time scale.  The reason for holding the parameters constant is to avoid overfitting to the particular data being considered. 
+Table~\ref{tbl:params} shows the parameter values used in the recent large-sample model evaluation (approximately 100 published reading experiments) of the cue-based retrieval model described in \textcite{EngelmannJaegerVasishth2019}. Here, we follow the practice that was adopted in \textcite{LewisVasishth2005}, of holding all the parameters constant to their default value. The only exception is the latency factor parameter, which scales retrieval time to the millisecond reading time scale.  The reason for holding the parameters constant is to avoid overfitting to the particular data being considered. 
 
 \begin{table}[!htbp]
 	\caption{Model parameters, their default values, and the values used in the simulation of the studies discussed in Engelmann et al., 2019.}
